<resources>

    <string name="app_name">شتلة</string>
<!--    <string name="app_name">Chattla</string>-->
    <string name="next">التالى</string>
    <string name="skip">تخطي</string>

    <string name="facebook_app_id">646680582921772</string>
    <string name="fb_login_protocol_scheme">fb646680582921772</string>


    <!-- SPLASH -->
    <string name="no_internet">أنت غير متصل بالإنترنت</string>
    <string name="exit">خروج</string>

    <!-- Login -->
    <string name="login">تسجيل الدخول</string>
    <string name="phone_num">رقم الهاتف</string>
    <string name="password">كلمة المرور</string>
    <string name="forget_password">هل نسيت كلمة المرور ؟</string>
    <string name="farmer_login">دخول مزارع</string>
    <string name="expert_login">دخول استشارى</string>
    <string name="new_account">إنشاء حساب جديد ؟</string>
    <string name="new_account_condition">بإنشاء حساب جديد توافق على</string>
    <string name="terms_and_conditions"><u> الشروط و الأحكام </u></string>
    <string name="loading_login">تسجيل الدخول..</string>

    <!-- REGISTRATION -->
    <string name="create_account">إنشاء حسابك</string>
    <string name="username">اسم المستخدم</string>
    <string name="date_of_birth">تاريخ الميلاد</string>
    <string name="gov">محل الإقامة</string>
    <string name="cit">المدينة</string>
    <string name="degree">الدرجة العلمية</string>
    <string name="experience">الخبرة</string>
    <string name="num_of_ex_in_agri">عدد سنوات الخبرة فى الزراعة</string>
    <string name="sign_up">تسجيل</string>

    <!-- FARMER PAGE -->
    <string name="my_consultation">إستشاراتى</string>
    <string name="add_your_consultation">إحجز إستشارتك الأن</string>
    <string name="no_consultations">لا توجد لديك إستشارات حاليا</string>
    <string name="logout">تسجيل الخروج</string>
    <string name="message_logout">هل تريد تسجيل الخروج؟</string>
    <string name="yes">تأكيد</string>
    <string name="cancle">إلغاء</string>

    <!-- ADD CONSULTATION PAGE -->
    <string name="fill_consultation_info">أملئ بيانات الإستشارة</string>
    <string name="crop_type">المحصول المزروع / المراد زراعتة</string>
    <string name="crop_variety">الصنف المزروع</string>
    <string name="agri_type">نوع الزراعة</string>
    <string name="irr_type">نوع الرى</string>
    <string name="land_type">نوع التربة</string>
    <string name="water_drainage">هل يوجد قنوات صرف ؟</string>
    <string name="choose_crop_type">إختر نوع المحصول</string>
    <string name="consultation_reason">سبب حجز الإستشارة</string>
    <string name="for_more_info">للتوضيح أكثر أرسل لنا :</string>
    <string name="voice_message">رسالة صوتية</string>
    <string name="image">صورة</string>
    <string name="press">إضغط</string>
    <string name="pick_location">لتحديد موقع المزرعة</string>
    <string name="farm_location">موقع المزرعة : </string>
    <string name="add_now">إحجز الأن</string>

    <!-- EXPERT PAGE -->
    <string name="consultations">الإستشارات</string>
    <string name="no_consults_field">لا توجد إستشارات حاليا</string>
    <string name="message_accept_consult">لن تتمكن من قبول أى إستشارة أخرى إلا بعد الإنتهاء من الإستشارة الحالية. هل تريد الاستمرار؟</string>
    <string name="sorry_message">تم قبول هذة الإستشارة من إستشارى أخر</string>

    <!-- CONSULTATION DETAILS PAGE -->
    <string name="consult_details">تفاصيل الإستشارة</string>
    <string name="climate_info">معلومات المناخ</string>
    <string name="weather_status">حالة الطقس : </string>
    <string name="temperature">درجة الحرارة : </string>
    <string name="humidity">الرطوبة : </string>
    <string name="pressure">الضغط : </string>
    <string name="consultation_image">صورة للمشكلة : </string>
    <string name="please_wait">من فضلك انتظر..</string>
    <string name="the_chat">المحادثة</string>

    <!-- CHAT PAGE -->
    <string name="message_end_consultation">هل أنت متأكد من إنهاء الإستشارة؟</string>
    <string name="finish">إنهاء</string>
    <string name="end_consult">إنهاء الإستشارة</string>
    <string name="consultation_finished">تم إنهاء الإستشارة</string>
    <string name="message_enter_review">من فضلك أضف تقييم</string>
    <string name="review_added">تم اضافة تقييمك</string>



</resources>
