<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    android:orientation="vertical"
    android:textDirection="rtl"
    android:background="@color/colorWhite"
    tools:context=".ui.addConsult.AddConsultActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:background="@color/colorPrimary">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_tittle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:paddingLeft="@dimen/_18sdp"
                android:fontFamily="@font/tajawal_medium"
                android:text="@string/fill_consultation_info"
                android:textColor="@color/white"
                android:textSize="@dimen/_16ssp" />


            <ImageView
                android:id="@+id/imageview_back"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:layout_marginLeft="@dimen/_16sdp"
                android:padding="@dimen/_2sdp"
                android:src="@drawable/ic_arrow" />
        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingRight="@dimen/_16sdp"
            android:paddingLeft="@dimen/_16sdp"
            android:background="@color/colorWhite"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:fontFamily="@font/tajawal_regular"
                android:text="@string/crop_type"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/_12ssp" />

            <Spinner
                android:id="@+id/sp_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:background="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:fontFamily="@font/tajawal_regular"
                android:text="@string/consultation_reason"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/_12ssp" />

            <Spinner
                android:id="@+id/sp_Reasons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:background="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_25sdp"
                android:fontFamily="@font/tajawal_regular"
                android:text="@string/for_more_info"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/_12ssp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_16sdp"
                android:background="@drawable/background_white_with_border"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="@dimen/_4sdp">


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_4sdp"
                    android:layout_marginEnd="@dimen/_14sdp"
                    android:layout_weight="2"
                    android:fontFamily="@font/tajawal_medium"
                    android:text="@string/voice_message"
                    android:textColor="@color/colorPrimaryDark" />

                <ImageView
                    android:id="@+id/record_btn"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/record_btn_stopped" />

                <Chronometer
                    android:id="@+id/record_timer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_24sdp"
                    android:layout_weight="1"
                    android:fontFamily="@font/tajawal_medium"
                    android:gravity="center"
                    android:textSize="@dimen/_14ssp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_16sdp"
                android:background="@drawable/background_white_with_border"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="@dimen/_4sdp">


                <TextView
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_4sdp"
                    android:layout_marginEnd="@dimen/_14sdp"
                    android:fontFamily="@font/tajawal_medium"
                    android:text="@string/image"
                    android:textColor="@color/colorPrimaryDark" />

                <ImageView
                    android:id="@+id/img_camera"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/ic_attachment_camera" />

                <ImageView
                    android:id="@+id/img_gallery"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/ic_attachment_gallery" />

            </LinearLayout>

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/img_consultation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_16sdp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:visibility="gone"
                app:riv_corner_radius="@dimen/_16sdp" />

            <LinearLayout
                android:id="@+id/location_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_16sdp"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="@dimen/_4sdp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/_4sdp"
                    android:fontFamily="@font/tajawal_medium"
                    android:text="@string/press"
                    android:textColor="@color/colorPrimaryDark" />

                <ImageView
                    android:id="@+id/img_location"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/baseline_location_on_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/tajawal_medium"
                    android:text="@string/pick_location"
                    android:textColor="@color/colorPrimaryDark" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/locationSelected"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:visibility="gone"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/_12ssp"
                    android:text="تم اضافة موقع مزرعتك"></TextView>

                <ImageView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/ic_baseline_done_24" />

            </LinearLayout>



            <LinearLayout
                android:id="@+id/farm_Location_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:visibility="gone"
                android:layout_marginTop="@dimen/_16sdp"
                android:orientation="horizontal"
                android:padding="@dimen/_4sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/tajawal_medium"
                    android:text="@string/farm_location"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark" />

                <TextView
                    android:id="@+id/farm_Location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/_8sdp"
                    android:fontFamily="@font/tajawal_medium"
                    android:textColor="@color/text_color" />


            </LinearLayout>


            <Button
                android:id="@+id/bt_save_consult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_36sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:background="@drawable/bk_button"
                android:fontFamily="@font/tajawal_regular"
                android:text="@string/add_now"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp" />


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</LinearLayout>